SFDCProject/src/objects/Lead_Distribution__c.object
<CustomObject>
    <description>Using for define the % roundrobin leads  distribution between SUNRUN and REC Solar.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_North__c</fullName>
        <formula>North_Leads__c /Total_RoundRobin_Leads__c</formula>
        <label>Actual % North</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_South__c</fullName>
        <formula>South_Leads__c /Total_RoundRobin_Leads__c</formula>
        <label>Actual % South</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_Distribution_ID__c</fullName>
        <displayFormat>LDSN{00000000}</displayFormat>
        <label>Lead Distribution ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>North_Leads__c</fullName>
        <label>North Leads</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>South_Leads__c</fullName>
        <label>South Leads</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunrun_North_Distribution__c</fullName>
        <label>Sunrun North % Distribution</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sunrun_South_Distribution__c</fullName>
        <label>Sunrun South % Distribution</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_RoundRobin_Leads__c</fullName>
        <formula>North_Leads__c  +  South_Leads__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total RoundRobin Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Distribution</label>
    <nameField>
        <label>Lead Distribution  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Distribution</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NorthSouth_Distribution</fullName>
        <active>true</active>
        <errorConditionFormula>Sunrun_North_Distribution__c+Sunrun_South_Distribution__c != 1</errorConditionFormula>
        <errorMessage>North + South Distribution % is not more than 100%</errorMessage>
    </validationRules>
</CustomObject>